// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test radio group label is VNode 1`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--horizontal">
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">
          <h1>eat</h1>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">
          <h2>sleep</h2>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled">
          <h3>game</h3>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group label is function 1`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--horizontal">
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">0-false</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">1-false</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled">2-false</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group label is function 2`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--horizontal">
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon var-radio--with-animation" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">0-false</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon var-radio--with-animation" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">1-true</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled">2-false</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group label is function 3`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--horizontal">
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon var-radio--with-animation" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">0-false</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon var-radio--with-animation" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">1-true</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled">2-false</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group label-key 1`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--horizontal">
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">eat</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">sleep</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled">game</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group layout direction 1`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--vertical">
    <!--v-if-->
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group options 1`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--horizontal">
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">eat</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">sleep</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled">game</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group validation 1`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--horizontal">
    <!--v-if-->
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--error" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--checked var-radio--error" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>必须选第一个</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test radio group validation 2`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--horizontal">
    <!--v-if-->
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon var-radio--with-animation" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <!--v-if-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group value-key 1`] = `
"<div class="var-radio-group__wrap">
  <div class="var-radio-group var-radio-group--horizontal">
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">eat</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text">sleep</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
    <div class="var-radio__wrap">
      <div class="var-radio">
        <div class="var-radio__action var-radio--unchecked var-radio--disabled"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
          <div class="var-hover-overlay"></div>
        </div>
        <div class="var-radio__text var-radio--disabled">game</div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio validation 1`] = `
"<div class="var-radio__wrap">
  <div class="var-radio">
    <div class="var-radio__action var-radio--unchecked var-radio--error" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-blank var-radio__icon" style="transition-duration: 0ms;" var-radio-cover=""></i>
      <div class="var-hover-overlay"></div>
    </div>
    <!--v-if-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>您必须勾选</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test radio validation 2`] = `
"<div class="var-radio__wrap">
  <div class="var-radio">
    <div class="var-radio__action var-radio--checked" tabindex="0"><i class="var-icon var-icon--set var-icon-radio-marked var-radio__icon var-radio--with-animation" style="transition-duration: 0ms;" var-radio-cover=""></i>
      <div class="var-hover-overlay"></div>
    </div>
    <!--v-if-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
